--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # VuePress 默认临时文件目录
-.docs/vuepress/.temp
+docs/.vuepress/.temp
 # VuePress 默认缓存目录
-.docs/vuepress/.cache
+docs/.vuepress/.cache
 # VuePress 默认构建生成的静态文件目录
-.docs/vuepress/dist
+docs/.vuepress/dist
 node_modules
